  EntityEditModelTest added
  bindEventsInternal() added where applicable, so that you don't have to remember to call super.bindEvents() when overriding bindEvents()
  EntityEditModel.getEntityCopy() overloaded with includePrimaryKeyValues parameter
  EntityEditModel.insert() now uses the above method
  EntityEditModel.stEntityNotNull changed to stEntityNull
  EntityEditModel.getEntityNotNullState() renamed to getEntityNullState()
  EntityEditModel.initializeEntityComboBoxModels() removed
  EntityEditModel.isPropertyNullable() added
  EntityEditPanel.getDefaultFocusComponent() added, protected
  EntityApplicationPanel now statically initializes the Messages class
  Property.preferredWidth renamed to preferredColumnWidth
  EntityRepository.getTransientProperties() added
  EntityDefinition.transientProperties field added plus getter
  EntityResultPacker now initializes Property.TransientProperty values as null, does not apply to Property.DenomormalizedViewProperty
  EntityDefinition, added tableName to constructor, used in demos, supports multiple entities based on the same table
  EntityRepository.setEntitySearchProperties() removed
  EntityTestUnit.createEntity() added
  Property.columnHasDefaultValue field added
  UiUtil.selectAllOnFocusGained() now clears the selection on focus lost
  FilteredComboBoxModel.nullValueItem renamed to nullValueString
  FilteredComboBoxModel.emptyStringIsNull boolean field added
  PropertyComboBoxModel sets emptyStringIsNull as true
  EntityEditModel.validate() now takes an action parameter
  EntityEditModel.validate() now takes into account if a column has a default value during null value validation
  EntityUiUtil.createEntityLookupField() now calls UiUtil.selectAllOnFocusGained() for the field
  Entity.validateType() added entity type validation for foreign keys
  EntityDb.delete(EntityCriteria) added
  SelectCriteria refactored out of EntityCriteria
  CriteriaUtil added, moved static helper methods there from EntityCriteria