@@ -924,3 +924,4 @@
   EntityDb.delete(EntityCriteria) added
   SelectCriteria refactored out of EntityCriteria
   CriteriaUtil added, moved static helper methods there from EntityCriteria
+  EntityTableSearchModel.setExactSearchValue renamed to setSearchValues and generalized, now takes a propertyID and a Collection of values
